removed commented code